--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Louis Montaut"
+title                    : "Yann de Mont-Marin"
 title_separator          : "-"
-name                     : &name "Louis Montaut"
+name                     : &name "Yann de Mont-Marin"
 description              : &description "personal description"
 url                      : https://lmontaut.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "lmontaut/lmontaut.github.io"
+repository               : "ymontmarin/ymontmarin.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
