--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yann de Mont-Marin"
 title_separator          : "-"
 name                     : &name "Yann de Mont-Marin"
 description              : &description "personal description"
-url                      : https://lmontaut.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ymontmarin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ymontmarin/ymontmarin.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
