Fix google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Inria, Paris"
   employer         :
   pubmed           :
-  googlescholar    : "https://scholar.google.com/citations?user=iN41GLwAAAAJ&hl=en&oi=ao"
+  googlescholar    : "https://scholar.google.com/citations?user=jFEhgPAAAAAJ&hl=en"
   email            : "yann.montmarin@gmail.com, yann.de-mont-marin@inria.fr"
   researchgate     : "https://www.researchgate.net/profile/Yann-De-Mont-Marin"
   uri              :
